--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "Tonik",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "devDependencies": {
     "@types/jquery": "^3.5.16",
     "@typescript-eslint/eslint-plugin": "5.41.0",
